--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".ligIn.LogInActivity">
+        </activity>
+        <activity android:name=".dashboardactivity.DahBoardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
