--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // rx
     implementation 'com.netflix.rxjava:rxjava-android:0.16.1'
@@ -52,4 +54,14 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:2.15"
     kapt "com.google.dagger:dagger-compiler:2.15"
     implementation "com.google.dagger:dagger-android-support:2.15"
+
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
+
 }
+apply plugin: 'com.google.gms.google-services'
