--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
             android:name=".App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:label="TradeMe"
             android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".ligIn.LogInActivity">
         </activity>
-        <activity android:name=".dashboardactivity.DahBoardActivity">
+        <activity android:name=".dashboardactivity.DahBoardActivity"
+        android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
